# AviSynthPlus-SubImageFile

./: BlendSubtitles.avsi  CMakeLists.txt  README.md
msvc/: SubImageFile.sln  SubImageFile.vcxproj  SubImageFile.vcxproj.filters
src/: SubImageFile.cpp  SubImageFile.rc
